--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="tag">Cute Proposal Mode: ON 💘</div>
 
     <h1>Tanya, will you be my Valentine? 💖</h1>
-    <p class="sub">From Prakhar 🥰✨ (officially asking with full cuteness)</p>
+    <p class="sub">From Prakhar 🥰✨</p>
 
     <!-- Tanya loading animation -->
     <div class="loading" id="loading">
@@ -206,8 +206,6 @@
 
     <div class="hint" id="hint">Tanya… the “No” button is just for drama 😌💖</div>
 
-    <!-- Music toggle -->
-    <button class="musicBtn" id="musicBtn">🔊 Play music</button>
 
     <!-- Reasons list -->
     <div class="reasons" id="reasonsBox">
@@ -226,11 +224,6 @@
       <p>Best Valentine ever 😭❤️</p>
       <p style="margin-top:6px;"><b>— Prakhar 🫶</b></p>
     </section>
-
-    <!-- Audio (you can replace this link with any MP3 you want) -->
-    <audio id="bgMusic" loop>
-      <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-    </audio>
 
   </main>
 
@@ -308,3 +301,4 @@
   </script>
 </body>
 </html>
+
